Docs: auth 관련 수정사항 적용
응답헤더로 토큰 보내주는것 추가
