# src/controllers/auth-controller.js
@@ -1,8 +1,8 @@
 import { StatusCodes } from 'http-status-codes';
-import { authService } from '../services';
+import { authService, tokenHandler } from '../services';
 
 const authController = {
-  // post /signin
+  // post /auth/signin
   signIn: async function (req, res, next) {
     try {
       const { email, password } = req.body;
@@ -22,7 +22,7 @@ const authController = {
     }
   },
 
-  // post /password-reset
+  // post /auth/password-reset
   resetPassword: async function (req, res, next) {
     try {
       const { name, email, phone } = req.body;
@@ -38,7 +38,7 @@ const authController = {
     }
   },
 
-  // post /validation
+  // post /auth/validation
   checkUserValidation: async function (req, res, next) {
     try {
       const { password } = req.body;
@@ -48,6 +48,25 @@ const authController = {
 
       return res.status(StatusCodes.OK).json({
         message: '비밀번호가 확인됐습니다.',
+      });
+    } catch (err) {
+      next(err);
+    }
+  },
+
+  // post /auth/tokens
+  getNewAccessToken: async function (req, res, next) {
+    try {
+      const authHeader = req.header('Authorization');
+      const accessToken = authHeader ? authHeader.replace('Bearer ', '') : null;
+
+      const decodedAccessToken = jwt.verify(accessToken, process.env.ACCESS_TOKEN_SECRET_KEY);
+      const newAccessToken = tokenHandler.createAccessToken(decodedAccessToken);
+
+      res.header('Authorization', newAccessToken);
+
+      res.status(StatusCodes.OK).json({
+        message: '새 Access Token을 발급했습니다.',
       });
     } catch (err) {
       next(err);
