# src/services/token-handler.js
@@ -4,20 +4,22 @@ import { ObjectId } from 'mongodb';
 import { customError } from '../middlewares';
 
 const tokenHandler = {
-  // 엑세스 토큰 만료 확인 및 디코딩
+  // Access Token 유효성 검사 및 디코딩
   verifyAccessToken: function (req, res, next) {
     try {
       const authHeader = req.header('Authorization');
       const accessToken = authHeader ? authHeader.replace('Bearer ', '') : null;
 
+      // Redis blacklist에서 검사해줘야 함.
+
       if (!accessToken) {
-        throw new customError(StatusCodes.UNAUTHORIZED, '토큰이 없습니다.');
+        throw new customError(StatusCodes.UNAUTHORIZED, 'Access Token이 없습니다.');
       }
 
       const decodedAccessToken = jwt.verify(accessToken, process.env.ACCESS_TOKEN_SECRET_KEY);
       const currentTime = Math.floor(Date.now() / 1000);
       if (decodedAccessToken.exp <= currentTime) {
-        throw new customError(StatusCodes.UNAUTHORIZED, '토큰을 새로 발급받아주세요.', true);
+        throw new customError(StatusCodes.UNAUTHORIZED, 'Access Token을 새로 발급받아주세요.', true);
       }
 
       req.decoded = decodedAccessToken;
@@ -29,11 +31,28 @@ const tokenHandler = {
     }
   },
 
+  // Refresh Token 유효성 검사 및 만료일 검사
+  verifyRefreshToken: function (req, res, next) {
+    try {
+      const authHeader = req.header('X-Refresh-Token');
+      const refreshToken = authHeader ? authHeader.replace('Bearer ', '') : null;
+
+      if (!refreshToken) {
+        throw new customError(StatusCodes.UNAUTHORIZED, 'Refresh Token이 없습니다.');
+      }
+
+      // Redis에서 refreshToken 확인해줘야 함
+      // 없으면 새로 로그인하라고 보내줘야 함
+    } catch (err) {
+      next(err);
+    }
+  },
+
   // Access Token 생성
-  createAccessToken: function (user) {
+  createAccessToken: function (data) {
     const newAccessToken = jwt.sign(
       {
-        email: user.email,
+        email: data.email,
       },
       process.env.ACCESS_TOKEN_SECRET_KEY,
       {
@@ -46,6 +65,7 @@ const tokenHandler = {
   },
 
   // Refresh Token 생성
+  // 생성과 동시에 redis에 저장
   createRefreshToken: function () {
     const refreshId = new ObjectId().toString('hex'); // uuid
     const newRefreshToken = jwt.sign(
